; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/lib/extr_string.c_strtobool.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/lib/extr_string.c_strtobool.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @strtobool(i8* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = getelementptr inbounds i8, i8* %6, i64 0
  %8 = load i8, i8* %7, align 1
  %9 = sext i8 %8 to i32
  switch i32 %9, label %14 [
    i32 121, label %10
    i32 89, label %10
    i32 49, label %10
    i32 110, label %12
    i32 78, label %12
    i32 48, label %12
  ]

10:                                               ; preds = %2, %2, %2
  %11 = load i32*, i32** %5, align 8
  store i32 1, i32* %11, align 4
  br label %17

12:                                               ; preds = %2, %2, %2
  %13 = load i32*, i32** %5, align 8
  store i32 0, i32* %13, align 4
  br label %17

14:                                               ; preds = %2
  %15 = load i32, i32* @EINVAL, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %3, align 4
  br label %18

17:                                               ; preds = %12, %10
  store i32 0, i32* %3, align 4
  br label %18

18:                                               ; preds = %17, %14
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
